--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </head>
 <body>
+    <header class="cabecalho">
+        <a href="login.html" class="home"><img src="./src/logo.png" alt="logo" width="50" class="logo"></a>
+        <a href="" class="entrar">Entrar</a>
+        <a href="" class="registro">Registrar</a>
+    </header>
     <button id="mostrar">Mostrar Certificado</button>
 
     <div id="container" class="container" style="display: none;">
